[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.2'
parking_lot = '0.7.1'
tokio = '0.1'
trie-root = '0.12.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.substrate-tcr-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '783ca1892892454e05e234cda5f7a2e42a54461e'

[build-dependencies]
vergen = '3'

[[bin]]
name = 'substrate-tcr'
path = 'src/main.rs'

[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'substrate-tcr'
version = '1.0.0'
[profile.release]
panic = 'unwind'
