[package]
authors = ['Anonymous']
build = 'build.rs'
edition = '2018'
name = 'substrate-tcr'
version = '2.0.0'

[dependencies]
derive_more = '0.15.0'
exit-future = '0.1.4'
futures = '0.1.29'
log = '0.4.8'
parking_lot = '0.9.0'
tokio = '0.1.22'
trie-root = '0.15.2'

[dependencies.aura]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.aura-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.codec]
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.ctrlc]
features = ['termination']
version = '3.1.3'

[dependencies.grandpa]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.grandpa-primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-finality-grandpa-primitives'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.substrate-tcr-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[[bin]]
name = 'substrate-tcr'
path = 'src/main.rs'

[build-dependencies]
vergen = '3.0.4'

[workspace]
members = ['runtime']
[profile.release]
panic = 'unwind'
