[build-dependencies.wasm-builder-runner]
package = 'substrate-wasm-builder-runner'
version = '1.0.4'
[dependencies.aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-aura'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.aura-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.0.0'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.grandpa]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-grandpa'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.offchain-primitives]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-offchain-primitives'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.randomness-collective-flip]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-randomness-collective-flip'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.safe-mix]
default-features = false
version = '1.0.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sr-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.substrate-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.transaction-payment]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-transaction-payment'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = 'acf86cd4b0ad4c45dbba57c2ae323531d5b71264'

[features]
default = ['std']
std = [
    'codec/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'aura/std',
    'aura-primitives/std',
    'grandpa/std',
    'executive/std',
    'indices/std',
    'primitives/std',
    'sr-primitives/std',
    'randomness-collective-flip/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'transaction-payment/std',
    'version/std',
    'serde',
    'safe-mix/std',
    'offchain-primitives/std',
    'substrate-session/std',
]

[package]
authors = ['Anonymous']
edition = '2018'
name = 'substrate-tcr-runtime'
version = '2.0.0'
