[profile.release]
lto = true
panic = 'abort'
[dependencies.substrate-tcr-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['substrate-tcr-runtime/std']

[lib]
crate-type = ['cdylib']

[workspace]
members = []

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'substrate-tcr-runtime-wasm'
version = '1.0.0'
